architecture of projects

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,6 @@
     <script src="lib/p5.min.js"></script>
     <script src="sketch2.js"></script>
 
-
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/gif" href="assets/img/home/square.gif">
@@ -107,7 +106,7 @@
                     <ul>
                         <li><a href="projects/monaKamoto/index.html">Mona Kamoto</a></li>
                         <li><a href="#">Powerful Xtra Card</a></li>
-                        <li><a href="#">Crypto Portrait</a></li>
+                        <li><a href="projects/cryptoPortraits/cryptoportraits.html">Crypto Portrait</a></li>
                         <li><a href="#">THΞ MΞRGΞ</a></li>
                         <li><a href="#">Crypto Skulls</a></li>
                         <li><a href="#">Bitcoin Price</a></li>
