--- a/projects/cryptoPortraits/cryptoportraits.html
+++ b/projects/cryptoPortraits/cryptoportraits.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>SMLDMS / Patterns Over Landform</title>
+  <title>SMLDMS / Crypto Portraits</title>
   <meta name="description" content="SMLDMS | Generative & Crypto Art">
   <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
@@ -32,6 +32,7 @@
   <link rel="icon" type="image/gif" href="../../../assets/img/home/square.gif">
 
 </head>
+
 <body>
   <header>
     <nav id="site-nav" class="site-nav">
@@ -68,64 +69,47 @@
     </div>
   </div>
 
-
   <!-- DESCRIPTION
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <hr>
+
   <div class="section">
     <div class="container">
       <div class="twelve columns" style="margin-top: 0%">
 
         <div class="one-half column" style="margin-top: 5%">
-          <img src="../../../assets/img/home/last/POL_dune.jpg" class="u-full-width">
+          <img src="projet/crypto_portrait_9.jpg" class="u-full-width">
 
         </div>
 
         <div class="one-half column" style="margin-top: 5%">
-          <h4>Patterns Over Landform</h4>
-          <h6>P.O.L is my genesis Blueprint on
-            <a
-              href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">Async.art</a>
-          </h6>
-          <p>This work is a generative art project. All the elements (the 4 columns, the dunes, the trees, the circles
-            and the mask bands) were coded separately and randomly distributed in space on a 4K canvas in P5js. Each
-            iteration is therefore unique
-            and 865,810,176,000 combinations are possible for only 128 copies available.</p>
-
-          <a class="button"
-            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
-            Async.art</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-
-  <!-- LEGENDARY
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <div class="section legend">
-    <div class="container">
-      <div class="row">
-        <div class="six columns" style="margin-top: 3%">
-          <h5>Legendary Editions (The acid burn)</h5>
-          <p>Of the 128 editions that will be mounted, only 3 will have legendary status. These three outputs are
-            assembled, retouched and then animated in Adobe After Effects.
+          <h4>Crypto Portrait</h4>
+          <h6>13 crypto personalities highlighted</h6>
+          <p>The images are previously clipped, then processed by threshold and levels in order to be reinterpreted by
+            the program.</p>
+          <p>
+            You can pull these well-known personalities from the crypto world<br />
+            ► Arthur Breitman: Ultra Rare<br />
+            ► Kathleen Breitman: Ultra Rare<br />
+            ► John McAfee: Super Rare<br />
+            ► Satoshi Nakamoto (x2): Rare<br />
+            ► Vitalik Buterin: Rare<br />
+            ► Sam Bankman: Common<br />
+            ► Justin Sun: Common<br />
+            ► Charles Hoskinson: Common<br />
+            ► Changpeng Zhao: Common<br />
+            ► Gavin Wood: Common<br />
+            ► Andre Cronje: Common<br />
+            ► Michael Saylor: Common<br />
+            ► Brian Armstrong: Common<br />
           </p>
-          <p>Saturation is overheat, the acid is rising on the patterns.</p>
-        </div>
 
-        <div class="six columns" style="margin-top: 3%">
-          <video controls loop class="u-full-width">
-            <source src="projet/Legendary.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-
+          <a class="button" href="https://www.fxhash.xyz/generative/15153">View on
+            fxHash</a>
         </div>
       </div>
     </div>
   </div>
-
+  </div>
 
 
 
@@ -138,15 +122,14 @@
         <h5 style="margin-bottom:-3%">Some outputs</h5>
         <div class="twelve columns" style="margin-top: 3%">
           <div class="masonry2">
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/1.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/3.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_4.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_6.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/5.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/7.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/8.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_1.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_7.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_6.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_8.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_4.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_10.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_11.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/crypto_portrait_12.jpg" alt=""></a></div>
           </div>
         </div>
       </div>
@@ -159,7 +142,7 @@
     <div class="container">
       <div class="row">
         <div class="three columns" style="margin-top: -3%">
-          <h5>Released: September 2022 </h5>
+          <h5>Released: June 2022 </h5>
         </div>
       </div>
     </div>
