--- a/projects/voyage_en_orient/index.html
+++ b/projects/voyage_en_orient/index.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>SMLDMS / Patterns Over Landform</title>
+  <title>SMLDMS / Voyage en Orient 2.0</title>
   <meta name="description" content="SMLDMS | Generative & Crypto Art">
   <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
@@ -32,6 +32,7 @@
   <link rel="icon" type="image/gif" href="../../../assets/img/home/square.gif">
 
 </head>
+
 <body>
   <header>
     <nav id="site-nav" class="site-nav">
@@ -77,24 +78,41 @@
       <div class="twelve columns" style="margin-top: 0%">
 
         <div class="one-half column" style="margin-top: 5%">
-          <img src="../../../assets/img/home/last/POL_dune.jpg" class="u-full-width">
+          <img src="projet/present.jpg" class="u-full-width">
 
         </div>
 
         <div class="one-half column" style="margin-top: 5%">
-          <h4>Patterns Over Landform</h4>
-          <h6>P.O.L is my genesis Blueprint on
-            <a
-              href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">Async.art</a>
-          </h6>
-          <p>This work is a generative art project. All the elements (the 4 columns, the dunes, the trees, the circles
-            and the mask bands) were coded separately and randomly distributed in space on a 4K canvas in P5js. Each
-            iteration is therefore unique
-            and 865,810,176,000 combinations are possible for only 128 copies available.</p>
+          <h4>Voyage en Orient 2.0</h4>
+          <h6>P.O.L is my genesis Blueprint on </h6>
+          <p>Entre juin et septembre 1851, Gustave Flaubert agé de 28 ans fait avec son ami Maxime de Camp un voyage de
+            sept mois en Egypte. Ils remontent le Nil d’Alexandrie jusqu’en Nubie puis redescendent avec une excursion
+            de traverse vers la mer
+            Rouge.</p>
 
-          <a class="button"
-            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
-            Async.art</a>
+          <p>Durant le voyage Flaubert, ébloui et ému, tient un journal de ses rencontres avec les hommes, les femmes et
+            le pays.
+            D’une écriture très picturale et puissamment évocatrice, parfois crue, ce journal est riche en miniatures
+            saisissantes de perfection.
+            Plus qu’une évocation des monuments rencontrés qui souvent l’ennuient, Flaubert y exprime un souci
+            particulier pour le paysage, la couleur et la lumière, prétexte à des esquisses éblouissantes.</p>
+
+          <p>L'adaptation que nous proposons est un film sans acteur, sans camera et surtout un voyage immobile, il
+            prend la route que Gustave Flaubert emprunte pour remonter le Nil dans l'Internet d’aujourd’hui.
+            Deux temporalités coexistent tout au long du documentaire l'une serait comme une interprétation de la
+            partition de cette mémoire collective qui se construit dans le cyberespace, l'autre le texte que Gustave
+            Flaubert a bien voulu nous laisser dans son journal de voyage.</p>
+
+          <p>Ce film est une une enquête sur les représentations du monde dans la toile, une enquête et un voyage dans
+            le monde digitalisé, illustré par les photographies, sons et vidéos trouvées sur ce chemin virtuel vers
+            l'orient dans des sites tels que Opens street map, Google maps, aporee, YouTube et bien d'autres...</p>
+
+          <ul class="infos">
+            <li>Scénario et Documentation : Marcos Riesco</li>
+            <li>Compositing et Montage : Samuel Dumas & Pierrick Point</li>
+            <li>Musique et Sons : François Donato</li>
+          </ul>
+
         </div>
       </div>
     </div>
@@ -107,27 +125,16 @@
   <div class="section legend">
     <div class="container">
       <div class="row">
-        <div class="six columns" style="margin-top: 3%">
-          <h5>Legendary Editions (The acid burn)</h5>
-          <p>Of the 128 editions that will be mounted, only 3 will have legendary status. These three outputs are
-            assembled, retouched and then animated in Adobe After Effects.
-          </p>
-          <p>Saturation is overheat, the acid is rising on the patterns.</p>
-        </div>
-
-        <div class="six columns" style="margin-top: 3%">
-          <video controls loop class="u-full-width">
-            <source src="projet/Legendary.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+        <div class="twelve columns" style="margin-top: 3%">
+          <iframe width="100%" height="400" src="https://www.youtube.com/embed/6ifQ22YhC4Q" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
           </video>
-
         </div>
       </div>
     </div>
   </div>
-
-
-
 
 
   <!-- PORTFOLIO
@@ -135,18 +142,16 @@
   <div class="section folio">
     <div class="container">
       <div class="row">
-        <h5 style="margin-bottom:-3%">Some outputs</h5>
         <div class="twelve columns" style="margin-top: 3%">
           <div class="masonry2">
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/1.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/3.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_4.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_6.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/5.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/7.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/8.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-3-1024x576.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-4-1024x576.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-5-1024x576.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-2-1024x576.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-7-1024x576.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-8-1024x576.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projet/VEO-2a-1-1024x576.jpg" alt=""></a></div>
+
           </div>
         </div>
       </div>
@@ -159,7 +164,7 @@
     <div class="container">
       <div class="row">
         <div class="three columns" style="margin-top: -3%">
-          <h5>Released: September 2022 </h5>
+          <h5>Released: March 2016 </h5>
         </div>
       </div>
     </div>
