--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
   <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/gif" href="assets/img/home/square.gif">
-
 </head>
 
 <body>
   <header>
     <nav id="site-nav" class="site-nav">
       <ul>
-        <li><a href="#"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
+        <li><a href="https://smldms.com"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
         <li><a href="#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
         <li><a href="about.html"><i class="fa fa-pencil-alt site-nav--icon"></i>About</a></li>
         <li><a href="https://linktr.ee/smldms"><i class="fa fa-dollar-sign site-nav--icon"></i>Linktree</a></li>
@@ -81,7 +80,7 @@
   <div class="section">
     <div class="container">
       <div class="row">
-        <h5>LAST NFT DROP ||| |||||| | ||| | ||| ||</h5>
+        <h5>NEXT NFT DROP ||| |||||| | ||| | ||| ||</h5>
         <div class="twelve columns" style="margin-top: 0%">
           <a href="projects/lof/lof.html"><img src="projects/lof/projet/POL_by_smldms_2.jpg" class="u-full-width"></a>
         </div>
@@ -122,7 +121,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 0%">
-          <h5>FEATURED |||||||||| ||| | |||||| | ||| ||</h5>
+          <h5>VARIOUS |||||||||| ||| | |||||| | ||| ||</h5>
           <div class="masonry">
             <div class="item"><a
                 href="projects/asyncCurves/index.html"><img
@@ -143,11 +142,11 @@
                   src="assets/img/portfolio/satoshi_collage__0000_Calque 11.jpg" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/15900"><img class="u-full-width"
                   src="assets/img/portfolio/5.jpg" alt=""></a></div>
-            <div class="item"><a href="https://www.fxhash.xyz/generative/15153"><img class="u-full-width"
+            <div class="item"><a href="projects/cryptoPortraits/cryptoportraits.html"><img class="u-full-width"
                   src="assets/img/portfolio/crypto_portrait_2.png" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/8990"><img class="u-full-width"
                   src="assets/img/portfolio/genesis_block_4.png" alt=""></a></div>
-            <div class="item"><a href="https://www.youtube.com/watch?v=6ifQ22YhC4Q&t=517s"><img class="u-full-width"
+            <div class="item"><a href="projects/voyage_en_orient/"><img class="u-full-width"
                   src="assets/img/portfolio/VEO-2a-6-1024x576.png" alt=""></a></div>
             <div class="item"><a href="projects/joy_division/joydivision.html"><img class="u-full-width"
                   src="assets/img/portfolio/out (4).png" alt=""></a></div>
