--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="one-half column" style="margin-top: 5%">
           <h4>Patterns Over Landform</h4>
-          <h6>P.O.L is my genesis Blueprint on
+          <h6>My genesis Blueprint on
             <a
               href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">Async.art</a>
           </h6>
@@ -121,7 +121,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 0%">
-          <h5>VARIOUS |||||||||| ||| | |||||| | ||| ||</h5>
+          <h5>|||||||||| ||| | |||||| | ||| ||</h5>
           <div class="masonry">
             <div class="item"><a
                 href="projects/asyncCurves/index.html"><img
@@ -131,13 +131,13 @@
             <div class="item"><a href="projects/mountains/mountains.html"><img class="u-full-width"
                   src="projects/mountains/img/mountains_0000_Calque 5.jpg" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/11016"><img class="u-full-width"
-                  src="assets/img/portfolio/01.png" alt=""></a></div>
+                  src="assets/img/portfolio/01.png" alt="the circle"></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/13623"><img class="u-full-width"
-                  src="assets/img/portfolio/10.jpg" alt=""></a></div>
+                  src="assets/img/portfolio/10.jpg" alt="Techno City"></a></div>
             <div class="item"><a href="projects/monaKamoto/index.html"><img class="u-full-width"
-                  src="assets/img/portfolio/monakamoto.jpg" alt=""></a></div>
+                  src="assets/img/portfolio/monakamoto.jpg" alt="Mona Kamoto"></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/10893"><img class="u-full-width"
-                  src="assets/img/portfolio/47.png" alt=""></a></div>
+                  src="assets/img/portfolio/47.png" alt="Lines & turbulence"></a></div>
             <div class="item"><a href="projects/satoshiCollage/satoshi.html"><img class="u-full-width"
                   src="assets/img/portfolio/satoshi_collage__0000_Calque 11.jpg" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/15900"><img class="u-full-width"
