--- a/projects/lines_turbulence/index.html
+++ b/projects/lines_turbulence/index.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>SMLDMS / Patterns Over Landform</title>
+  <title>SMLDMS / Lines and turbulence</title>
   <meta name="description" content="SMLDMS | Generative & Crypto Art">
   <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
@@ -93,8 +93,7 @@
             and 865,810,176,000 combinations are possible for only 128 copies available.</p>
 
           <a class="button"
-            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
-            Async.art</a>
+            href="https://www.fxhash.xyz/generative/10893">View on fxHash</a>
         </div>
       </div>
     </div>
