--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <nav id="site-nav" class="site-nav">
       <ul>
         <li><a href="https://smldms.com"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
-        <li><a href="#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
+        <!-- <li><a href="#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li> -->
+        <li><a href="projects.html"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
         <li><a href="about.html"><i class="fa fa-pencil-alt site-nav--icon"></i>About</a></li>
         <li><a href="https://linktr.ee/smldms"><i class="fa fa-dollar-sign site-nav--icon"></i>Linktree</a></li>
       </ul>
@@ -52,7 +53,6 @@
     </div>
   </header>
   <script src="lib/nav.js"></script>
-
 
 
   <div class="section title">
@@ -100,12 +100,10 @@
           </h6>
           <p>This work is a generative art project. All the elements (the 4 columns, the dunes, the trees, the circles
             and the mask bands) were coded separately and randomly distributed in space on a 4K canvas in P5js. Each
-            iteration is therefore unique
-            and 865,810,176,000 combinations are possible for only 128 copies available.</p>
+            iteration is therefore unique and 865,810,176,000 combinations are possible for only 128 copies available.</p>
 
           <a class="button"
-            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
-            Async.art</a>
+            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on Async.art</a>
           <a class="button" href="projects/lof/lof.html">More details</a>
         </div>
       </div>
