--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,8 @@
         <nav id="site-nav" class="site-nav">
             <ul>
                 <li><a href="index.html"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
-                <li><a href="index.html#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
+                <!-- <li><a href="index.html#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li> -->
+                <li><a href="#"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
                 <li><a href="about.html"><i class="fa fa-pencil-alt site-nav--icon"></i>About</a></li>
                 <li><a href="https://linktr.ee/smldms"><i class="fa fa-dollar-sign site-nav--icon"></i>Linktree</a></li>
             </ul>
@@ -53,7 +54,6 @@
         </div>
     </header>
     <script src="lib/nav.js"></script>
-
 
 
     <div class="section title">
@@ -69,14 +69,12 @@
     <div class="section p5">
         <div class="container">
             <div class="row">
-                <div class="twelve columns" style="margin-top: 25%">
+                <div class="twelve columns" style="margin-top: 15%">
                     <!-- <img class="u-full-width" src="assets/img/home/top.png"> -->
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <!-- Intro
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
