--- a/projects/asyncCurves/index.html
+++ b/projects/asyncCurves/index.html
@@ -38,7 +38,7 @@
         <nav id="site-nav" class="site-nav">
             <ul>
                 <li><a href="../../index.html"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
-                <li><a href="../../index.html#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
+                <li><a href="../../projects.html"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
                 <li><a href="../../about.html"><i class="fa fa-pencil-alt site-nav--icon"></i>About</a></li>
                 <li><a href="https://linktr.ee/smldms"><i class="fa fa-dollar-sign site-nav--icon"></i>Linktree</a></li>
             </ul>
