--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
                         <li><a href="projects/cryptoPortraits/cryptoportraits.html">Crypto Portrait</a></li>
                         <li><a href="https://www.fxhash.xyz/generative/17921">THΞ MΞRGΞ</a></li>
                         <li><a href="#">Crypto Skulls</a></li>
-                        <li><a href="#">Bitcoin Price</a></li>
+                        <li><a href="http://art.smldms.com/btcprice">Bitcoin Price</a></li>
                     </ul>
                 </div>
                 <div class="three columns" style="margin-top: 2%">
