--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 0%">
-          <h5>|||||||||| ||| | |||||| | ||| ||</h5>
+          <h5>NFTs|||||||||| ||| | |||||| | ||| ||</h5>
           <div class="masonry">
             <div class="item"><a
                 href="projects/asyncCurves/index.html"><img
