--- a/index.html
+++ b/index.html
@@ -75,36 +75,35 @@
     </div>
   </div>
 
-  <!-- LAST PROJECT
+  <!-- NEXT DROP
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="section">
     <div class="container">
       <div class="row">
         <h5>NEXT NFT DROP ||| |||||| | ||| | ||| ||</h5>
         <div class="twelve columns" style="margin-top: 0%">
-          <a href="projects/lof/lof.html"><img src="projects/lof/projet/POL_by_smldms_2.jpg" class="u-full-width"></a>
+          <a href="projects/monaKamoto/index.html"><img src="projects/monaKamoto/img/banner.png" class="u-full-width"></a>
         </div>
       </div>
       <div class="twelve columns" style="margin-top: 0%">
 
-        <div class="one-half column" style="margin-top: 5%">
-          <img src="assets/img/home/last/POL_dune.jpg" class="u-full-width">
+        <div class="three columns" style="margin-top: 5%">
+          <img src="projects/monaKamoto/img/present.png" class="u-full-width">
 
         </div>
 
-        <div class="one-half column" style="margin-top: 5%">
-          <h4>Patterns Over Landform</h4>
-          <h6>My genesis Blueprint on
+        <div class="nine columns" style="margin-top: 5%">
+          <h4>Mona Kamoto</h4>
+          <h6>a Web3 RΞnaissance Blueprint on
             <a
-              href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">Async.art</a>
+              href="https://async.market/blueprints/6310a03a508206edcd1d73c9/smldms-mona-kamoto">Async.art</a>
           </h6>
-          <p>This work is a generative art project. All the elements (the 4 columns, the dunes, the trees, the circles
-            and the mask bands) were coded separately and randomly distributed in space on a 4K canvas in P5js. Each
-            iteration is therefore unique and 865,810,176,000 combinations are possible for only 128 copies available.</p>
+          <p>Put the Laser Eyes on and mint a Web3 RΞnaissance Blueprint with the great Mona Kamoto.</p>
+          <p>When the world thought that Dorian Nakamoto could have been Satoshi, his face has become one of the best known in the cryptosphere. With NFTs, since 2017 we have witnessed a rebirth of digital art, this is how Mona was born Kamoto. Inspired by probably the most famous canvas in the world, very symbol of the Renaissance, this Blueprint composition appropriates certain artifices of 90's pop culture, Mona adorns himself with tattoos and wears his laser eyes to disrupt the system.</p>
 
           <a class="button"
             href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on Async.art</a>
-          <a class="button" href="projects/lof/lof.html">More details</a>
+          <a class="button" href="projects/monaKamoto/index.html">More details</a>
         </div>
       </div>
     </div>
