mona kamoto title

--- a/projects/monaKamoto/index.html
+++ b/projects/monaKamoto/index.html
@@ -6,7 +6,7 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>SMLDMS / The Joy, the Division</title>
+    <title>SMLDMS / Mona Kamoto</title>
     <meta name="description" content="SMLDMS | Generative & Crypto Art">
     <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
