add pattern over landform in project.html

--- a/projects.html
+++ b/projects.html
@@ -94,6 +94,7 @@
                         <li><a href="https://www.fxhash.xyz/generative/13053">Data Drop</a></li>
                         <li><a href="https://www.fxhash.xyz/generative/11016">A Circle</a></li>
                         <li><a href="https://www.fxhash.xyz/generative/15878">The Traces</a></li>
+                        <li><a href="projects/lof/lof.html">Patterns over Landform</a></li>
                         <li><a href="https://www.fxhash.xyz/generative/15803">Techno Cluster</a></li>
                         <li><a href="https://www.fxhash.xyz/generative/8120">Panopticon</a></li>
                         <li><a href="https://www.fxhash.xyz/generative/13118">Rays & Dust</a></li>
