change home drop

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="section">
     <div class="container">
       <div class="row">
-        <h5>NEXT NFT DROP ||| |||||| | ||| | ||| ||</h5>
+        <h5>LAST NFT DROP ||| |||||| | ||| | ||| ||</h5>
         <div class="twelve columns" style="margin-top: 0%">
           <a href="projects/monaKamoto/index.html"><img src="projects/monaKamoto/img/banner.png" class="u-full-width"></a>
         </div>
