--- a/index.html
+++ b/index.html
@@ -75,9 +75,66 @@
     </div>
   </div>
 
+  <div class="section projects">
+    <div class="container">
+        <div class="row">
+            <div class="three columns" style="margin-top: 2%">
+                <h5>Generative Art</h5>
+                <ul>
+                    <li><a href="projects/mountains/mountains.html">Mountains</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/10893">Lines & Turbulence</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/13623">Techno City</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/11415">The Way</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/15900">Data Glitch Communication</a></li>
+                    <li><a href="projects/joy_division/joydivision.html">The Joy, The Division</a></li>
+                    <li><a href="projects/asyncCurves/index.html">The Async Curves</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/13053">Data Drop</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/11016">A Circle</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/15878">The Traces</a></li>
+                    <li><a href="projects/lof/lof.html">Patterns over Landform</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/15803">Techno Cluster</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/8120">Panopticon</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/13118">Rays & Dust</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/14109">Sea View</a></li>
+                </ul>
+            </div>
+            <div class="three columns" style="margin-top: 2%">
+                <h5>Crypto Art</h5>
+                <ul>
+                    <li><a href="projects/monaKamoto/index.html">Mona Kamoto</a></li>
+                    <li><a href="http://powerfulxtracard.com/">Powerful Xtra Card</a></li>
+                    <li><a href="projects/cryptoPortraits/cryptoportraits.html">Crypto Portrait</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/17921">THΞ MΞRGΞ</a></li>
+                    <li><a href="#">Crypto Skulls</a></li>
+                    <li><a href="http://art.smldms.com/btcprice">Bitcoin Price</a></li>
+                </ul>
+            </div>
+            <div class="three columns" style="margin-top: 2%">
+                <h5>Animation</h5>
+                <ul>
+                    <li><a href="projects/voyage_en_orient/index.html">Voyage en Orient 2.0</a></li>
+                    <li><a href="https://www.behance.net/gallery/108620199/In-a-loop">In a Loop</a></li>
+                    <li><a href="https://www.behance.net/gallery/118259741/Crypto-Dreamers">Crypto Dreamers</a></li>
+                    <li><a href="https://www.behance.net/gallery/118259763/Lnds-vtoen">ŁȺnđsȼȺᵽɇ vɨƀɍȺŧɨøn</a></li>
+                </ul>
+            </div>
+            <div class="three columns" style="margin-top: 2%">
+                <h5>Post-Photography</h5>
+                <ul>
+                    <li><a href="#">Rans in Paris</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/8500">Windows on Texture</a></li>
+                    <li><a href="#">Anatomy of a Zombie</a></li>
+                    <li><a href="#">Lisle Noire</a></li>
+                    <li><a href="https://www.behance.net/gallery/108620609/jaomaise">Яомаисэ</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
   <!-- NEXT DROP
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="section">
+  <!-- <div class="section">
     <div class="container">
       <div class="row">
         <h5>LAST NFT DROP ||| |||||| | ||| | ||| ||</h5>
@@ -108,7 +165,7 @@
       </div>
     </div>
   </div>
-  </div>
+  </div> -->
 
 
   <!-- PORTFOLIO
@@ -118,7 +175,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 0%">
-          <h5>NFTs|||||||||| ||| | |||||| | ||| ||</h5>
+          <h1>NFTs</h1>
           <div class="masonry">
             <div class="item"><a
                 href="projects/asyncCurves/index.html"><img
