modif Voyage ne Orient

--- a/projects/voyage_en_orient/index.html
+++ b/projects/voyage_en_orient/index.html
@@ -84,7 +84,7 @@
 
         <div class="one-half column" style="margin-top: 5%">
           <h4>Voyage en Orient 2.0</h4>
-          <h6>P.O.L is my genesis Blueprint on </h6>
+          <h6>Gustave Flaubert à la sauce 2.0 </h6>
           <p>Entre juin et septembre 1851, Gustave Flaubert agé de 28 ans fait avec son ami Maxime de Camp un voyage de
             sept mois en Egypte. Ils remontent le Nil d’Alexandrie jusqu’en Nubie puis redescendent avec une excursion
             de traverse vers la mer
@@ -108,9 +108,10 @@
             l'orient dans des sites tels que Opens street map, Google maps, aporee, YouTube et bien d'autres...</p>
 
           <ul class="infos">
+            <li>Création pour le Centre Bellegarde 2014</li>
             <li>Scénario et Documentation : Marcos Riesco</li>
             <li>Compositing et Montage : Samuel Dumas & Pierrick Point</li>
-            <li>Musique et Sons : François Donato</li>
+            <li>Musique et Sons : <a href="http://www.struzz.com/">François Donato</a></li>
           </ul>
 
         </div>
